[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/web_pages/editor/post_entries/WebPageEntryImageEditor.gd" type="Script" id=1]

[node name="WebPageEntryTitleTextEditor" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="ImagePath" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/ImagePath"]
margin_top = 5.0
margin_right = 75.0
margin_bottom = 19.0
text = "image Path:"

[node name="ImagePathLE" type="LineEdit" parent="VBoxContainer/ImagePath"]
margin_left = 79.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ImageURL" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/ImageURL"]
margin_top = 5.0
margin_right = 72.0
margin_bottom = 19.0
text = "image URL:"

[node name="ImageURLLE" type="LineEdit" parent="VBoxContainer/ImageURL"]
margin_left = 76.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ImageAlt" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="VBoxContainer/ImageAlt"]
margin_top = 5.0
margin_right = 127.0
margin_bottom = 19.0
text = "image alt (optional):"

[node name="ImageAltLE" type="LineEdit" parent="VBoxContainer/ImageAlt"]
margin_left = 131.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ImageWH" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="VBoxContainer/ImageWH"]
margin_top = 5.0
margin_right = 153.0
margin_bottom = 19.0
text = "Image Width (Optional):"

[node name="ImageWidthSB" type="SpinBox" parent="VBoxContainer/ImageWH"]
margin_left = 157.0
margin_right = 508.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_value = 999999.0
rounded = true

[node name="Label2" type="Label" parent="VBoxContainer/ImageWH"]
margin_left = 512.0
margin_top = 5.0
margin_right = 669.0
margin_bottom = 19.0
text = "Image Heigth (Optional):"

[node name="ImageHeigthSB" type="SpinBox" parent="VBoxContainer/ImageWH"]
margin_left = 673.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 1024.0
margin_bottom = 112.0
alignment = 1

[node name="ImagePreview" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 512.0
margin_right = 512.0
